fix: Smaller down width of too wide section

--- a/src/components/FoodSection/FoodSection.module.scss
+++ b/src/components/FoodSection/FoodSection.module.scss
@@ -22,7 +22,7 @@
 
 .cards_section_overflow {
   overflow: hidden;
-  width: 100vw;
+  width: calc(100vw - 2rem);
 }
 
 .small_card {
